--- a/about1.html
+++ b/about1.html
@@ -32,8 +32,6 @@
   </head>
   <body>
     <!-- header -->
-<<<<<<< HEAD
-=======
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -52,10 +50,10 @@
             <div class="nav-menu">
               <ul class="d-flex al-center">
                 <li><a href="index1.html">Home</a></li>
-                <li><a href="about1.html">About Us</a></li>
+                <li><a href="about1.html" class="active">About Us</a></li>
                 <li><a href="service1.html">Service</a></li>
                 <li><a href="career1.html">Career</a></li>
-                <li><a href="contact1.html" class="active">Contact Us</a></li>
+                <li><a href="contact1.html">Contact Us</a></li>
               </ul>
             </div>
             <div class="contact-btn">
@@ -65,26 +63,34 @@
         </div>
       </nav>
     </header>
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
 
     <!-- banner -->
-    <section
-      class="global-banner"
-<<<<<<< HEAD
-      style="background-image: url(images/career-1.jpg)"
-=======
-      style="background-image: url(images/service-banner.jpg)"
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
-    >
-      <div class="container">
+    <section class="global-banner">
+      <div class="">
         <div class="global-wrapper">
           <div class="global-content">
-            <h1>Animesh Karan</h1>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
-              suscipit soluta incidunt quos provident, earum repellat voluptatum
-              voluptate inventore!
-            </p>
+            <div class="banner-item-list owl-carousel">
+              <div class="banner-1">
+                <figure>
+                  <img src="images/career/career-1.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+              <div class="banner-2">
+                <figure>
+                  <img src="images/career/career-2.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -93,11 +99,6 @@
     <!-- main -->
 
     <!-- footer -->
-<<<<<<< HEAD
-
-    <!-- jquery -->
-    <script
-=======
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
@@ -184,21 +185,14 @@
     </footer>
 
     <!-- jquery -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
     <!-- owl crousal -->
     <script
-=======
-    ></script> -->
-    <!-- owl crousal -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
@@ -209,11 +203,7 @@
       integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
-=======
-    ></script> -->
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
