--- a/career1.html
+++ b/career1.html
@@ -65,143 +65,142 @@
     </header>
 
     <!-- banner -->
-    <section
-      class="global-banner"
-      style="background-image: url(images/career-2.jpg)"
-      style="background-image: url(images/service-banner.jpg)"
-    >
-      <div class="container">
+    <section class="global-banner">
+      <div class="">
         <div class="global-wrapper">
           <div class="global-content">
-            <h1>Animesh Karan</h1>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
-              suscipit soluta incidunt quos provident, earum repellat voluptatum
-              voluptate inventore!
-            </p>
+            <div class="banner-item-list owl-carousel">
+              <div class="banner-1">
+                <figure>
+                  <img src="images/career/career-1.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+              <div class="banner-2">
+                <figure>
+                  <img src="images/career/career-2.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- main -->
-     
-<main>
+    <main>
+      <!-- Careers Introduction Section -->
+      <section class="careers-intro">
+        <div class="container">
+          <h2>Please join us</h2>
+          <p>
+            Take a look at the open positions below.<br />
+            If none of them suits you, or you feel you could help us in another
+            way, please fill out the form below or contact us directly at
+            contact@company.com
+          </p>
+        </div>
+      </section>
 
-    <!-- Careers Introduction Section -->
-    <section class="careers-intro">
-      <div class="container">
-        <h2>Please join us</h2>
-        <p>
-          Take a look at the open positions below.<br />
-          If none of them suits you, or you feel you could help us in another way,
-          please fill out the form below or contact us directly at contact@company.com
-        </p>
-      </div>
-    </section>
-  
-    <!-- Careers Table Section -->
-    <section class="careers-list">
-      <div class="container">
-        <h3>Developers</h3>
-  
-        <div class="job-card">
-  
-          <div class="job-row">
-            <div class="job-info">
-              <h4>Senior Web Full Stack Developer</h4>
-              <p>
-                We are looking for experienced Full Stack developers to join our 
-                team. You will participate in all aspects of the software 
-                development lifecycle including estimating, technical design, 
-                implementation, documentation, testing, deployment, and support.
-              </p>
+      <!-- Careers Table Section -->
+      <section class="careers-list">
+        <div class="container">
+          <h3>Developers</h3>
+
+          <div class="job-card">
+            <div class="job-row">
+              <div class="job-info">
+                <h4>Senior Web Full Stack Developer</h4>
+                <p>
+                  We are looking for experienced Full Stack developers to join
+                  our team. You will participate in all aspects of the software
+                  development lifecycle including estimating, technical design,
+                  implementation, documentation, testing, deployment, and
+                  support.
+                </p>
+              </div>
+
+              <div class="job-skills">
+                <span>React</span>
+                <span>JavaScript</span>
+                <span>TypeScript</span>
+                <span>Node.js</span>
+                <span>MongoDB</span>
+                <span>API Integration</span>
+                <span>Frontend Frameworks</span>
+              </div>
+
+              <div class="job-location">
+                <p>
+                  Remote — Worldwide<br />
+                  Brno — Czech Republic<br />
+                  Prague — Czech Republic
+                </p>
+              </div>
             </div>
-  
-            <div class="job-skills">
-              <span>React</span>
-              <span>JavaScript</span>
-              <span>TypeScript</span>
-              <span>Node.js</span>
-              <span>MongoDB</span>
-              <span>API Integration</span>
-              <span>Frontend Frameworks</span>
+
+            <div class="job-actions">
+              <button class="btn apply-btn">Apply Now</button>
+              <button class="btn learn-btn">Learn More</button>
             </div>
-  
-            <div class="job-location">
-              <p>
-                Remote — Worldwide<br />
-                Brno — Czech Republic<br />
-                Prague — Czech Republic
-              </p>
-            </div>
-  
           </div>
-  
-          <div class="job-actions">
-            <button class="btn apply-btn">Apply Now</button>
-            <button class="btn learn-btn">Learn More</button>
-          </div>
-  
         </div>
-      </div>
-    </section>
-  
-    <!-- Contact / Hire Form Section -->
-    <section class="careers-contact">
-      <div class="container">
-  
-        <div class="contact-layout">
-  
-          <div class="contact-image">
-            <!-- image added later -->
+      </section>
+
+      <!-- Contact / Hire Form Section -->
+      <section class="careers-contact">
+        <div class="container">
+          <div class="contact-layout">
+            <div class="contact-image">
+              <!-- image added later -->
+            </div>
+
+            <div class="contact-form">
+              <h3>Connect With Your Next Great Hire Today!</h3>
+
+              <form>
+                <div class="form-group">
+                  <input type="text" placeholder="Company" />
+                  <input type="text" placeholder="Your Name" />
+                </div>
+
+                <div class="form-group">
+                  <input type="text" placeholder="Phone Number" />
+                  <input type="email" placeholder="Email" />
+                </div>
+
+                <div class="form-group">
+                  <textarea placeholder="Project Detail"></textarea>
+                </div>
+
+                <div class="form-check">
+                  <input type="checkbox" />
+                  <label>
+                    By sending this form I confirm that I have read and accept
+                    the
+                    <a href="#">Privacy Policy</a>.
+                  </label>
+                </div>
+
+                <button class="btn">GET CONSULTATION</button>
+              </form>
+            </div>
           </div>
-  
-          <div class="contact-form">
-            <h3>Connect With Your Next Great Hire Today!</h3>
-  
-            <form>
-              <div class="form-group">
-                <input type="text" placeholder="Company" />
-                <input type="text" placeholder="Your Name" />
-              </div>
-  
-              <div class="form-group">
-                <input type="text" placeholder="Phone Number" />
-                <input type="email" placeholder="Email" />
-              </div>
-  
-              <div class="form-group">
-                <textarea placeholder="Project Detail"></textarea>
-              </div>
-  
-              <div class="form-check">
-                <input type="checkbox" />
-                <label>
-                  By sending this form I confirm that I have read and accept the
-                  <a href="#">Privacy Policy</a>.
-                </label>
-              </div>
-  
-              <button class="btn">GET CONSULTATION</button>
-            </form>
-          </div>
-  
         </div>
-  
-      </div>
-    </section>
-  
-  </main>
-  <!-- end main -->
-  
+      </section>
+    </main>
+    <!-- end main -->
 
     <!-- footer -->
-
-    <!-- jquery -->
-    <script
-
-
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
@@ -288,20 +287,14 @@
     </footer>
 
     <!-- jquery -->
-    <!-- <script
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
     <!-- owl crousal -->
     <script
-=======
-    ></script> -->
-    <!-- owl crousal -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
@@ -312,11 +305,7 @@
       integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
-=======
-    ></script> -->
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
