--- a/contact1.html
+++ b/contact1.html
@@ -32,8 +32,6 @@
   </head>
   <body>
     <!-- header -->
-<<<<<<< HEAD
-=======
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -65,115 +63,112 @@
         </div>
       </nav>
     </header>
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
 
     <!-- banner -->
-    <section
-      class="global-banner"
-<<<<<<< HEAD
-      style="background-image: url(images/career-3.jpg)"
-=======
-      style="background-image: url(images/service-banner.jpg)"
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
-    >
-      <div class="container">
+    <section class="global-banner">
+      <div class="">
         <div class="global-wrapper">
           <div class="global-content">
-            <h1>Animesh Karan</h1>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
-              suscipit soluta incidunt quos provident, earum repellat voluptatum
-              voluptate inventore!
-            </p>
+            <div class="banner-item-list owl-carousel">
+              <div class="banner-1">
+                <figure>
+                  <img src="images/career/career-1.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+              <div class="banner-2">
+                <figure>
+                  <img src="images/career/career-2.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- main -->
-
-<<<<<<< HEAD
-    
-<!-- main -->
-<main>
-
-    <!-- Contact Title Section -->
-    <section class="contact-header">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>We specialize in helping you build a team of expert developers.</p>
-      </div>
-    </section>
-  
-    <!-- Get In Touch Section -->
-    <section class="get-in-touch">
-      <div class="container">
-        <h3>Get in touch</h3>
-        <p>
-          Please feel free to get in touch with us via any convenient means 
-          (phone, whatsapp, email, submit a contact form).
-          We will be glad to answer your questions as soon as possible.
-        </p>
-      </div>
-    </section>
-  
-    <!-- Contact Layout Section -->
-    <section class="contact-form-section">
-      <div class="container">
-  
-        <div class="contact-layout">
-  
-          <div class="contact-map">
-            <!-- map image or bg added later -->
-          </div>
-  
-          <div class="contact-form">
-            <h3>Connect With Your Next Great Hire Today!</h3>
-  
-            <form>
-              <div class="form-group">
-                <input type="text" placeholder="Company" />
-                <input type="text" placeholder="Your Name" />
-              </div>
-  
-              <div class="form-group">
-                <input type="text" placeholder="Phone Number" />
-                <input type="email" placeholder="Email" />
-              </div>
-  
-              <div class="form-group">
-                <textarea placeholder="Project Detail"></textarea>
-              </div>
-  
-              <div class="form-check">
-                <input type="checkbox" />
-                <label>
-                  By sending this form I confirm that I have read and accept the
-                  <a href="#">Privacy Policy</a>.
-                </label>
-              </div>
-  
-              <button class="btn">GET CONSULTATION</button>
-            </form>
-          </div>
-  
+    <main>
+      <!-- Contact Title Section -->
+      <section class="contact-header">
+        <div class="container">
+          <h2>Contact</h2>
+          <p>We specialize in helping you build a team of expert developers.</p>
         </div>
-  
-      </div>
-    </section>
-  
-  </main>
-  <!-- end main -->
-  
-  
-  
+      </section>
 
-    <!-- footer -->
+      <!-- Get In Touch Section -->
+      <section class="get-in-touch">
+        <div class="container">
+          <h3>Get in touch</h3>
+          <p>
+            Please feel free to get in touch with us via any convenient means
+            (phone, whatsapp, email, submit a contact form). We will be glad to
+            answer your questions as soon as possible.
+          </p>
+        </div>
+      </section>
 
-    <!-- jquery -->
-    <script
-=======
-    <!-- footer -->
+      <!-- Contact Layout Section -->
+      <section class="contact-form-section">
+        <div class="container">
+          <div class="contact-layout">
+            <div class="contact-map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.0706346017646!2d88.43318712475703!3d22.569078383100436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275abf4cadad9%3A0x617148c6351331b6!2sStesalit%20Tower%2C%20GP%20Block%2C%20Sector%20V%2C%20Bidhannagar%2C%20West%20Bengal%20700091!5e1!3m2!1sen!2sin!4v1762714772790!5m2!1sen!2sin"
+                width="600"
+                height="450"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+
+            <div class="contact-form">
+              <h3>Connect With Your Next Great Hire Today!</h3>
+
+              <form>
+                <div class="form-group">
+                  <input type="text" placeholder="Company" />
+                  <input type="text" placeholder="Your Name" />
+                </div>
+
+                <div class="form-group">
+                  <input type="text" placeholder="Phone Number" />
+                  <input type="email" placeholder="Email" />
+                </div>
+
+                <div class="form-group">
+                  <textarea placeholder="Project Detail"></textarea>
+                </div>
+
+                <div class="form-check">
+                  <input type="checkbox" />
+                  <label>
+                    By sending this form I confirm that I have read and accept
+                    the
+                    <a href="#">Privacy Policy</a>.
+                  </label>
+                </div>
+
+                <button class="btn">GET CONSULTATION</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer class="footer">
       <div class="footer-cta">
         <div class="container">
@@ -185,7 +180,6 @@
           <a href="contact.html" class="btn-primary">Get in Touch</a>
         </div>
       </div>
-
       <div class="footer-main">
         <div class="container footer-grid">
           <!-- Logo & About -->
@@ -213,7 +207,6 @@
               ></a>
             </div>
           </div>
-
           <!-- Quick Links -->
           <div class="footer-col">
             <h4>Quick Links</h4>
@@ -224,7 +217,6 @@
               <li><a href="#">Services</a></li>
             </ul>
           </div>
-
           <!-- Legal -->
           <div class="footer-col">
             <h4>Security</h4>
@@ -235,7 +227,6 @@
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
-
           <!-- Contact Info -->
           <div class="footer-col">
             <h4>Contact</h4>
@@ -253,28 +244,21 @@
           </div>
         </div>
       </div>
-
       <div class="footer-bottom">
         <p>&copy; 2025 IT-Wings Webtech Solutions. All Rights Reserved.</p>
       </div>
     </footer>
-
     <!-- jquery -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
     <!-- owl crousal -->
-    <script
-=======
-    ></script> -->
+    <script></script>
     <!-- owl crousal -->
-    <!-- <script
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
       integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
@@ -285,11 +269,7 @@
       integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-<<<<<<< HEAD
     ></script>
-=======
-    ></script> -->
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
     <!-- custom js -->
     <script src="js/main.js"></script>
   </body>
