--- a/service1.html
+++ b/service1.html
@@ -32,8 +32,6 @@
   </head>
   <body>
     <!-- header -->
-<<<<<<< HEAD
-=======
     <header>
       <nav class="nav-bar">
         <div class="container">
@@ -65,35 +63,43 @@
         </div>
       </nav>
     </header>
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
 
     <!-- banner -->
     <section
       class="global-banner"
-<<<<<<< HEAD
-      style="background-image: url(images/career-banner.jpg)"
-=======
-      style="background-image: url(images/service-banner.jpg)"
->>>>>>> 17013a05876152b2873d052f3c22966a6e829d43
     >
-      <div class="container">
+      <div class="">
         <div class="global-wrapper">
           <div class="global-content">
-            <h1>Animesh Karan</h1>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet ad
-              suscipit soluta incidunt quos provident, earum repellat voluptatum
-              voluptate inventore!
-            </p>
+            <div class="banner-item-list owl-carousel">
+              <div class="banner-1">
+                <figure>
+                  <img src="images/career/career-1.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+              <div class="banner-2">
+                <figure>
+                  <img src="images/career/career-2.jpg" alt="" />
+                </figure>
+                <div class="banner-body-content">
+                  <h1></h1>
+                  <p></p>
+                  <div class="banner-body-btn"><a href=""></a></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
     <!-- main -->
-
-    <!-- main -->
-<main class="hire-developers">
+  <main class="hire-developers">
     <section class="developers-section">
       <div class="container">
         <div class="developers-header">
@@ -192,11 +198,6 @@
           
     </section>
   </main>
-  <!-- end main -->
-  
-    <!-- footer -->
-
-    <!-- jquery -->
     
     <!-- footer -->
     <footer class="footer">
